# Timesheet_App

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
static/css/: output.css
templates/: base.html
templates/leave_request/: leave_request_form.html  manager_dashboard.html  my_leave_request.html
templates/partials/: leave_balance_info.html  leave_days_calculation.html  leave_requests_table.html  navbar.html  timesheet_partial.html
templates/registration/: login.html
templates/timesheet/: add_row.html  row.html  weekly_timesheet.html
timesheet/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
timesheet/migrations/: 0001_initial.py  0002_project_alter_timeentry_unique_together_and_more.py  0003_timeentry_submitted.py  0004_leavetype_user_manager_leaverequest_leaveentitlement.py  0005_create_superuser.py
timesheet/templatetags/: leave_extras.py  timesheet_extras.py
timesheet_app/: asgi.py  settings.py  urls.py  wsgi.py
