[project]
name = "timesheet-app"
version = "0.1.0"
description = ""
authors = [
    {name = "JDias6"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise[brotli] (>=6.9.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "timesheet_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
